Ajustando login pra ser compativel com react native
